# cmake-rcpp-template

./: .gitmodules  DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  configure.win
R/: CLDistanceMatrix.R  OpenCLTemplateForR.R
man/: CLDistanceMatrix.Rd
src/: Makevars  Makevars.win  RcppInterface.cpp
src/backend/: CMakeLists.txt
src/backend/cmake/: find_toolchain.cmake
src/backend/include/backend/: distance_matrix.hpp  export.hpp  init.hpp
src/backend/kernels/: distance.cl
src/backend/src/: CL_context.cpp  distance_matrix.cpp  init.cpp
src/backend/src/internal/: CL_context.hpp
